Web Inspector: CSS background-image applied inline shows a warning, but still works. https://bugs.webkit.org/show_bug.cgi?id=70325

Reviewed by Antti Koivisto.

Source/WebCore:

This change eliminates the "non-parsed property" warning displayed next to any
"background-image" property of an element's inline style.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseDeclaration):
* css/CSSParser.h:
* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::setPropertyText):
(WebCore::InspectorStyleSheetForInlineStyle::getStyleAttributeRanges):

LayoutTests:

* inspector/styles/styles-new-API-expected.txt:
* inspector/styles/styles-new-API.html:

Canonical link: https://commits.webkit.org/87338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98714 268f45cc-cd09-0410-ab3c-d52691b4dbfc